# ChangeLog for dev-embedded/arduino
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-embedded/arduino/ChangeLog,v 1.7 2012/02/10 00:09:27 miknix Exp $

*arduino-1.0 (10 Feb 2012)

  10 Feb 2012; Angelo Arrifano <miknix@gentoo.org> +arduino-1.0.ebuild,
  +files/arduino-1.0-prog_char-fix.patch, +files/arduino-1.0-script.patch:
  Version bump, thanks Jess Haas for providing the ebuild, #303043

  09 Feb 2012; Angelo Arrifano <miknix@gentoo.org> metadata.xml:
  Add myself as maintaner, remove solar (with his permission)

*arduino-0017 (17 Oct 2009)

  17 Oct 2009; Joe Sapp <nixphoeni@gentoo.org> +arduino-0017.ebuild,
  +files/Makefile-0017.patch, +files/arduino-script-0017.patch:
  Version bump (bug #289205)

  24 Apr 2009; Joe Sapp <nixphoeni@gentoo.org> metadata.xml,
  arduino-0015-r1:
  -Forgot to remove librxtxSerial.so in src_install with the other external
   packages I could find (not entirely necessary, but good practice I
   think)
  -Added nixphoeni to maintainer list

*arduino-0015-r1 (18 Apr 2009)

  18 Apr 2009; Joe Sapp <nixphoeni@gentoo.org> -arduino-0011.ebuild,
  -arduino-0015.ebuild, +arduino-0015-r1.ebuild:
  Fix for amd64 systems - use system libraries instead of upstream-provided
  libraries. Check for avr-g++ since that's what the IDE will complain
  about. Also fixed potential security bug (see related bug #189249).

*arduino-0015 (14 Apr 2009)

  14 Apr 2009; <solar@gentoo.org> +files/Makefile-0015.patch,
  +arduino-0015.ebuild:
  - version bump. Bug 244969

*arduino-0011 (21 Sep 2008)

  21 Sep 2008; <solar@gentoo.org> +files/Makefile-0011.patch,
  +files/arduino, +metadata.xml, +arduino-0011.ebuild:
  - Initial Commit
