@@ -8,19 +8,20 @@ AUX arduino 49 RMD160 5cb54f143b4d69163121fd133f4effa474f2257d SHA1 72b9dc632235
 AUX arduino-1.0-prog_char-fix.patch 533 RMD160 452dae9afb00ca6f8d5f1bed012438f4e13b28c7 SHA1 ec2594e87ea06a796a5258cb96dbe68f40e02738 SHA256 0ab092fd602b47b3c8b9f7164fff4a3c284a02a6aafe9239e3cf158a04279881
 AUX arduino-1.0-script.patch 697 RMD160 dc43c3981ca3996af7c520af1bc097c1ab82e462 SHA1 a84134882a4892cdc8e5d92f1ff66888e422f957 SHA256 50c1f489b8cb1a6772f29a81184aba1b0324e4ab3117d87ef18f401e259600bb
 AUX arduino-script-0017.patch 688 RMD160 0ab5d830d7175c1b8286635cd656269109f355ed SHA1 c93ac06a1bf11b6eb49223a8773f37e9e54bb076 SHA256 a7ab22ccfe2ac2022e54239b333fad238bbc8edf99e274e4c3c6bee58943dc67
+AUX arduino.desktop 228 RMD160 71735ee198097b472af1cbee6ca4e27f8bb0652e SHA1 e22094a106f7acfa95e46f034fb261c09701fc14 SHA256 92a5ba03e4db99efd2a9dea5c5b7b6d2b0f5c512a73a73024f34cfd3db5b5fad
 DIST arduino-0015-linux.tgz 1389657 RMD160 6c1de452a0c3936c3cd658fe8784d593aa388cdf SHA1 9f6876449640f287f0c42d821e80e96017f3ddf3 SHA256 5eee994268a7f7227c6bf4ecb9290a256566c051fc0c215a91adbe7f314432fb
 DIST arduino-0017.tgz 4141675 RMD160 555ae7611d9335305ae60a28b901d2ade9cb4d8a SHA1 f40828b2bd2a229cb5ccec56afc70602e866dfc4 SHA256 0b9e61dbcd8577eb90e5f498f2a416659d7994f92e0a9a10e25619803f36a7e7
 DIST arduino-1.0-linux.tgz 4318822 RMD160 968452339a19af55dad32cfca05d81565de8d50b SHA1 588e8409846a10f379ed07f2f167237fd10c0006 SHA256 ea9868d6520d987810625a661dc8c1c5b5908fb44b2b00954b90f9d2f8c87070
 DIST arduino-1.0-linux64.tgz 4351508 RMD160 3c87a817b6dc309f53693bd49a7edfd7d326a530 SHA1 1317dbb39c52a6fda6c0a680d7b6ddf1c49c5027 SHA256 813ea60669563fed7f8e16e4553a3cf0a7a5e7f7ec766f10a630c1b60a9b955e
 EBUILD arduino-0015-r1.ebuild 2288 RMD160 0f518fb54255f2ff32528d30a26cd38241c20b2d SHA1 fac85b44f9d6e593cef04ffdae77459f4925416f SHA256 2de7aa7a257e9c83f7c535fe1fdd70e5c02fe8c96cd75d474aa0b9c722f71ae8
 EBUILD arduino-0017.ebuild 2119 RMD160 f31820968eecacc58e56d3c6d98efcd67beaee71 SHA1 f3dd9833a0b6d0af5a38e4399094275784f63a3b SHA256 df7f350f4b22f64c5e09ee4e3e475248a6ed4fff9770653c3e21db7bc13a2440
-EBUILD arduino-1.0.ebuild 2487 RMD160 5ab668451dc408e611d383739cb843d88aba9c91 SHA1 adb01d1075c940909746571514b0fe5f57f6bd50 SHA256 4de6153b46a36c79643a5e337b344e9044b8aed5e9c4bb11ab7c9dc5dfbd0b9f
-MISC ChangeLog 1730 RMD160 a803d879e4f97ac0ae5cee5c52626a2a7511e551 SHA1 b96ac60e5ec84cbeab0700cb02a6a702593ca952 SHA256 b6195b1e3d7cedf43f29a8db0217dfeb33ac9e0250df62e4d4c3e77d2b3b6a90
+EBUILD arduino-1.0.ebuild 2707 RMD160 c71c7120f37615369c2d0f43f710c00b92e64f6d SHA1 b4e5d2d565ade4f9627dca02c030e4d84ff9f0e1 SHA256 918b45966519c0a70fd71956421bd5e6a1cadf8d8486313c46019249e730a30f
+MISC ChangeLog 1876 RMD160 88205d7cd39874371ce173f5251caae65f0afc5a SHA1 8f259edeacab9788df1c269e1afd8d5c2ed42720 SHA256 b11afa3767db58f4790125f95e1e8c69cbced26652f0760073e3fb7ab71142fe
 MISC metadata.xml 297 RMD160 0924f915fabac6631eda486e34c35a542ae34710 SHA1 6830190f628bab697f9e21ac993a1fa1b4d5d46f SHA256 73f1c4f65508f6e26aa3cb95609ee4f77f687931075c073c58a81344ce1e46d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk80YEQACgkQbkqODQcg/HT8AgCfZ+ztrPNDRqDGLc7pue6KGqMc
-v/YAn00cJgj4UytwalHgQjRbhp4wm9Of
-=0H9x
+iEYEARECAAYFAk80afQACgkQbkqODQcg/HRksgCfdIqVYCi0IyrSH6yKGIT9Tqw8
+RiQAnj2D7lZ9+3Sl47f7ax06I2Jr7c0t
+=rNkA
 -----END PGP SIGNATURE-----
